# Mailing_Service

./: .coverage  .env.example  Readme.md  pyproject.toml
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
mail/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mail/migrations/: 0001_initial.py  0002_mail_author.py
mail/templates/mail/: mail_confirm_delete.html  mail_detail.html  mail_form.html  mail_list.html
mail/tests/: test_mail.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: send_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_date_and_time_first_launched_and_more.py  0003_attemptmailing.py  0004_alter_attemptmailing_mailing_and_more.py  0005_mailing_owner.py
mailing/templates/mailing/: base.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_statistics.html  (+1 more)
users/: forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_alter_user_groups_alter_user_is_active_and_more.py  0004_statistic.py  0005_alter_statistic_user.py
users/templates/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  statistics.html  template_success_registration.html
(+3 files in other folders)
