[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["Bazavod <eugeny.bazavod@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
requests = "^2.32.4"
openpyxl = "^3.1.5"
python-dotenv = "^1.1.0"
pytest = "^8.4.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
ipython = "^9.3.0"
django = "^5.2.3"
redis = "^6.2.0"
django-redis = "^6.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.16.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''(\.git)'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

